# entropy-simulator

./: README.md  pyproject.toml  requirements.txt
application/: dtos.py
application/use_cases/: __init__.py  calculate_decoherence.py  calculate_entropy_comparison.py
domain/: services.py
domain/contracts/: __init__.py  canonical_calculator_port.py  decoherence_calculator_port.py  microcanonical_calculator_port.py  temperature_energy_converter_port.py  von_neumann_calculator_port.py
domain/entities/: __init__.py  entropy.py  entropy_comparison.py  probability_distribution.py  quantum_system.py  spin_configuration.py  temporal_evolution_result.py
infrastructure/: calculators.py  converters.py  decoherence_calculator.py
main/: app.py  containers.py
tests/: test_domain_entities.py  test_infrastructure_calculators.py
